[功能]調整程式碼
