# app.js
@@ -17,6 +17,7 @@ const middlewareError = require('@/middlewares/middlewareError')
 
 // Load routes 請使用 ./ 引入不然 swagger 會找不到
 const routeExample = require('./routes/routeExample') // 引入自訂的 routeExample
+const routePosts = require('./routes/routePosts') // 引入自訂的 routePosts
 
 // Set up middleware
 app.use(logger('dev')) // 設定 morgan 的 logger，可以在 server 端看到請求的細節
@@ -29,11 +30,14 @@ app.use(cors({
   methods: 'GET,HEAD,PUT,PATCH,POST,DELETE,OPTIONS',
   allowedHeaders: ['Content-Type', 'Authorization']
 })) // 設定 cors
-app.use(middlewareError) // 設定錯誤處理
 
 // Set up routes
 app.use('/example', routeExample)
+app.use('/posts', routePosts)
 app.use('/api-doc', swaggerUi.serve, swaggerUi.setup(swaggerFile)) // 設定 swagger 的路由
+
+// Set up error handler
+app.use(middlewareError)
 
 // 程式出現重大錯誤時
 process.on('uncaughtException', (err) => {
